--- a/BackendDemo/src/main/resources/application.properties
+++ b/BackendDemo/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+spring.jpa.database = POSTGRESQL
+spring.datasource.platform = postgres
+spring.jpa.show-sql = true
+spring.datasource.driver-class-name = org.postgresql.Driver
+
+# parametri za konektovanje na bazu podataka sa fakultetskih računara
+# za studente je username i naziv baze u formatu: itXXg20XX, a password je: ftn
+#spring.datasource.url = jdbc:postgresql://192.168.100.251:5432/postgres
+#spring.datasource.username = postgres
+#spring.datasource.password = postgres
+# Parametri za konektovanje na bazu podataka sa ličnih računara
+# Svima je username i password postgres!
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+# port pomocu kojeg pristupamo app
+server.port = 8083
+# disable driver's feature detection
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+# without detection you have to set the dialect by hand
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jackson.serialization.fail-on-empty-beans=false
 
