--- a/BackendDemo/.classpath
+++ b/BackendDemo/.classpath
@@ -45,5 +45,7 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.datatools.connectivity.jdt.DRIVERLIBRARY/PostgreSQL JDBC Driver"/>
+	<classpathentry kind="con" path="org.eclipse.datatools.connectivity.jdt.DRIVERLIBRARY/PostgreSQL JDBC Driver_1"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
