--- a/BackendDemo/src/main/resources/application.properties
+++ b/BackendDemo/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 #spring.datasource.url = jdbc:postgresql://192.168.100.251:5432/postgres
 #spring.datasource.username = postgres
 #spring.datasource.password = postgres
-# Parametri za konektovanje na bazu podataka sa ličnih računara
-# Svima je username i password postgres!
+
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
@@ -22,3 +21,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.schema-locations=classpath:sqlScripts/create.sql
+spring.sql.init.data-locations=classpath:sqlScripts/insert.sql
+spring.sql.init.mode=always
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
