--- a/BackendDemo/src/main/resources/application.properties
+++ b/BackendDemo/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.schema-locations=classpath:create.sql
-spring.sql.init.data-locations=classpath:insert.sql
+spring.sql.init.schema-locations=classpath:sqlScripts/create.sql
+spring.sql.init.data-locations=classpath:sqlScripts/insert.sql
 spring.sql.init.mode=always
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
