--- a/BackendDemo/src/main/resources/application.properties
+++ b/BackendDemo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database = POSTGRESQL
-spring.datasource.platform = postgres
+spring.sql.init.platform = postgres
 spring.jpa.show-sql = true
 spring.datasource.driver-class-name = org.postgresql.Driver
 
